# Stock_Analyzer

./: .env.example  .gitignore  CODEX_HANDOFF.md  README.md  SECURITY.md  constraints.txt  pyproject.toml
.github/workflows/: tests.yml
deploy/: install_local_runtime.py  stock-analyzer.env.example
deploy/launchd/: com.stock-analyzer.dashboard.template.plist  com.stock-analyzer.portfolio-eod.template.plist  com.stock-analyzer.portfolio-price-watch.template.plist  com.stock-analyzer.portfolio.template.plist  com.stock-analyzer.shadow.template.plist  com.stock-analyzer.template.plist
deploy/systemd/: stock-analyzer.service  stock-analyzer.timer
docs/: ARCHITECTURE.md  DEPLOYMENT.md  INTELLIGENCE_ROADMAP.md  LOCAL_SCHEDULING.md  PROVIDER_BAKEOFF.md
stock_analyzer/: __init__.py  app.py  config.py  dashboard.py  database.py  exclusions.py  models.py  outcomes.py  pdf_reports.py  portfolio.py  portfolio_alerts.py  portfolio_models.py  portfolio_pdf.py  reporting.py  scoring.py  telegram.py  universe.py
stock_analyzer/catalysts/: __init__.py  aggregation.py  alpha_vantage_provider.py  base.py  composite_provider.py  finnhub_provider.py  fmp_provider.py  fred_provider.py  marketaux_provider.py  news.py  (+3 more)
tests/: test_app.py  test_catalysts.py  test_config.py  test_dashboard.py  test_database_cache.py  test_multisource.py  test_outcomes.py  test_pdf_reports.py  test_portfolio.py  test_portfolio_alerts.py  test_reporting.py  test_runtime_install.py  test_scoring.py  test_sec_provider.py  test_signal_changes.py  test_telegram.py  test_universe.py  test_yfinance_provider.py
(+6 files in other folders)
