[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analyzer"
version = "0.1.0"
description = "Telegram-first moonshot stock analyzer with pluggable market data providers."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12",
    "flask>=3.1,<4",
    "numpy>=2.2.6",
    "pandas>=2.2",
    "pdfplumber>=0.11,<1",
    "pypdf>=5.0,<7",
    "reportlab>=4.2,<5",
    "requests>=2.31",
    "yfinance>=0.2.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["stock_analyzer*"]

[tool.setuptools.package-data]
stock_analyzer = ["templates/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
